fix attachment overflow (FF)
I started to discuss this problem here https://github.com/philipwalton/flexbugs/issues/39#issuecomment-111211260 and in a Firefox bug https://bugzilla.mozilla.org/show_bug.cgi?id=1136818 but people defend this behaviour intended..

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -3522,6 +3522,7 @@ footer {
 
       .attachment-name {
         margin-right: 5px;
+        min-width: 0;
         @extend .u-highlight;
       }
 
